# stuff

./: CMakeLists.txt  README.md  test_qwistys_lib.c
docs/: alloc.md  avltree.md  flexa.md
inc/: .qwistys_alloc.c.swp  .qwistys_alloc.h.swp  qwistys_alloc.c  qwistys_alloc.h  qwistys_api.h  qwistys_avltree.c  qwistys_avltree.h  qwistys_flexa.c  qwistys_flexa.h  qwistys_lib.h  qwistys_macros.h  qwistys_stack.c  qwistys_stack.h
